<resources>
    <string name="app_name">News RSS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">News.am</string>
    <string name="nav_header_subtitle">editor@news.am</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_news">News</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_title_archive">Archive</string>
    <string name="menu_title_open_in_chrome">Open in Chrome</string>
    <string name="unable_ope_web_page">Problem to load the page, please check your connection</string>
    <string name="saved_in_archive">News saved in Archive</string>
    <string name="not_ready_to_archive">News doesn\'t ready yet to be Archive</string>
    <string name="settings_language_title">News language</string>
    <string name="settings_interval_title">Sync interval</string>
    <string name="settings_interval_enable_title">Automatic background sync</string>
    <string name="language_armenian">Հայերեն (Armenian)</string>
    <string name="language_english">English</string>
    <string name="language_russian">Русский (Russian)</string>
    <string name="interval_minute_not_recommended">1 min (not recommended)</string>
    <string name="interval_5_minute_not_recommended">5 min (not recommended)</string>
    <string name="interval_15_minutes">15 min</string>
    <string name="interval_30_minutes">30 min</string>
    <string name="interval_hour">1 hour</string>
    <string name="interval_2_hours">2 hours</string>
    <string name="interval_4_hours">4 hours</string>
    <string name="interval_8_hours">8 hours</string>
    <string name="interval_12_hours">12 hours</string>
    <string name="interval_1_day">1 day </string>
    <string name="cancel">Cancel</string>
    <string name="new_news_message">There are new news</string>
    <string name="notification_channel_id">News_notification_id</string>
    <string name="no_data">No Data</string>
    <string name="error_failed_open_in_browser">Unfortunately can\'t open this page in Browser</string>
    <string name="message_already_archived">The news already archived</string>
</resources>